pihole.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: pihole
 namespace: pihole
spec:
 replicas: 1
 selector:
  matchLabels:
   app: pihole
 strategy:
  type: RollingUpdate
  rollingUpdate:
   maxSurge: 2
   maxUnavailable: 0
 template:
  metadata:
   labels:
    app: pihole
  spec:
   affinity:
    nodeAffinity:
     requiredDuringSchedulingIgnoredDuringExecution:
      nodeSelectorTerms:
      - matchExpressions:
        - key: kubernetes.io/pi-type
          operator: In
          values:
           - rpi3
   containers:
    - name: pihole
      image: pihole/pihole:latest
      resources:
       limits:
        memory: 128Mi
        cpu: 200m
       requests:
        memory: 75Mi
        cpu: 100m
      ports:
       - containerPort: 80
      lifecycle:
       postStart:
        exec:
         command: ['/bin/sh', '-c', '/bin/rm -f /etc/pihole/gravity.db']
      volumeMounts:
       - name: pihole-white
         mountPath: "/etc/pihole/whitelist.txt"
         subPath: whitelist.txt
       - name: pihole-ads
         mountPath: "/etc/pihole/adlists.list"
         subPath: adlists.list
       - name: pihole-regex
         mountPath: "/etc/pihole/regex.list"
         subPath: regex.list
      readinessProbe:
       exec:
        command: ['dig', '@127.0.0.1', 'google.com']
       timeoutSeconds: 10
       initialDelaySeconds: 5
       periodSeconds: 30
      livenessProbe:
       tcpSocket:
        port: 80
       initialDelaySeconds: 15
       timeoutSeconds: 10
       periodSeconds: 120
       failureThreshold: 3
   volumes:
    - name: pihole-white
      configMap:
       name: pihole-white
       items:
        - key: whitelist.txt
          path: whitelist.txt
    - name: pihole-ads
      configMap:
       name: pihole-ads
       items:
        - key: adlists.list
          path: adlists.list
    - name: pihole-regex
      configMap:
       name: pihole-regex
       items:
        - key: regex.list
          path: regex.list
    - name: pihole-vars
      configMap:
       name: pihole-vars
---
apiVersion: v1
kind: Service
metadata:
 name: pihole-service-tcp
 namespace: pihole
 annotations:
spec:
 selector:
  app: pihole
 ports:
  - name: web
    protocol: TCP
    port: 8080
    targetPort: 80
 type: NodePort
 externalTrafficPolicy: Local
---
apiVersion: v1
kind: Service
metadata:
 name: pihole-service-udp
 namespace: pihole
spec:
 selector:
  app: pihole
 ports:
  - protocol: UDP
    port: 53
    targetPort: 53
 type: LoadBalancer
 externalTrafficPolicy: Local
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: pihole.donthurt.us
    http:
      paths:
      - path: /
        backend:
          serviceName: pihole-service-tcp
          servicePort: 8080
